--- a/index.css
+++ b/index.css
@@ -1,3 +1,36 @@
+.preloader {
+    /*фиксированное позиционирование*/
+    position: fixed;
+    /* координаты положения */
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    /* фоновый цвет элемента */
+    background: #e0e0e0;
+    /* размещаем блок над всеми элементами на странице (это значение должно быть больше, чем у любого другого позиционированного элемента на странице) */
+    z-index: 1001;
+    }
+    
+    .preloader__row {
+    position: relative;
+    top: 50%;
+    height: 70px;
+    margin-top: -35px;
+    margin-left: -35px;
+    text-align: center;
+    }
+    
+    
+    .loaded_hiding .preloader {
+    transition: 0.534s opacity;
+    opacity: 1;
+    }
+    
+    .loaded .preloader {
+    display: none;
+    }
+    
 .logo
 {
     width:146px;
@@ -52,16 +85,36 @@ height:62px;
     font-size:x-large;
     font-weight:bold;
 }
-.block1
-{
-    margin-left:350px ;
-}
-.block2
-{
-    margin-left:480px;
-}
 .news1
 {
     width:344px;
     height:224px;
+}
+#el1{
+    width: 370px;
+    height: 390px;
+}
+#el2{
+    width: 370px;
+    height: 390px;
+}
+#el3{
+    width: 370px;
+    height: 390px;
+}
+#el4{
+    width: 370px;
+    height: 390px;
+}
+#el5{
+    width: 370px;
+    height: 390px;
+}
+
+#lastsection{
+    background-image: url(../Images/6.svg);
+    -moz-background-size: 100%;
+    -webkit-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
 }
